Introduce a new IdleJob for the IDLE command.
Note that the API of this one is not set in stone yet and might change
before 4.4 is out.

svn path=/trunk/KDE/kdepimlibs/; revision=1004134

--- a/kimap/CMakeLists.txt
+++ b/kimap/CMakeLists.txt
@@ -14,6 +14,7 @@ set(kimap_LIB_SRCS
    appendjob.cpp
    capabilitiesjob.cpp
    fetchjob.cpp
+   idlejob.cpp
    listjob.cpp
    loginjob.cpp
    logoutjob.cpp
@@ -57,7 +58,7 @@ install(TARGETS kimap EXPORT kdepimlibsLibraryTargets ${INSTALL_TARGETS_DEFAULT_
 
 ########### install files ###############
 
-install( FILES kimap_export.h acl.h imapset.h job.h appendjob.h capabilitiesjob.h fetchjob.h listjob.h loginjob.h logoutjob.h rfccodecs.h
+install( FILES kimap_export.h acl.h imapset.h job.h appendjob.h capabilitiesjob.h fetchjob.h idlejob.h listjob.h loginjob.h logoutjob.h rfccodecs.h
  selectjob.h closejob.h expungejob.h deletejob.h createjob.h subscribejob.h unsubscribejob.h renamejob.h
  session.h sessionuiproxy.h storejob.h copyjob.h searchjob.h acljobbase.h setacljob.h getacljob.h deleteacljob.h
  myrightsjob.h listrightsjob.h quotajobbase.h setquotajob.h getquotajob.h getquotarootjob.h metadatajobbase.h setmetadatajob.h getmetadatajob.h
