Add a new attribute to store display settings for message folders. First one (and only one for now) is to determine if a folder has to be considered as a folder containing outbound messages or not.
svn path=/branches/work/akonadi-ports/kdepimlibs/; revision=1009646

--- a/akonadi/kmime/CMakeLists.txt
+++ b/akonadi/kmime/CMakeLists.txt
@@ -14,6 +14,7 @@ set( kmimeakonadi_LIB_SRC
   addressattribute.cpp
   localfolders.cpp
   localfoldersbuildjob.cpp
+  messagefolderattribute.cpp
   messagemodel.cpp
   messageparts.cpp
   messagethreadingattribute.cpp
@@ -36,6 +37,7 @@ install( FILES
   addressattribute.h
   localfolders.h
   akonadi-kmime_export.h
+  messagefolderattribute.h
   messagemodel.h
   messageparts.h
   messagethreadingattribute.h
