Move ResourceSynchronizationJob to the core library and clean up its API.
svn path=/trunk/KDE/kdepimlibs/; revision=1010094

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -115,6 +115,7 @@ set( akonadikde_LIB_SRC
   resourcebase.cpp
   resourcescheduler.cpp
   resourceselectjob.cpp
+  resourcesynchronizationjob.cpp
   searchcreatejob.cpp
   selectionproxymodel.cpp
   selftestdialog.cpp
@@ -244,6 +245,7 @@ install( FILES
   qtest_akonadi.h
   preprocessorbase.h
   resourcebase.h
+  resourcesynchronizationjob.h
   searchcreatejob.h
   selectionproxymodel.h
   session.h
