use the Boost_MINIMUM_VERSION string in the macro_log_feature message
svn path=/trunk/KDE/kdepimlibs/; revision=1010214

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,8 @@ include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})
 ############### Find the stuff we need ###############
 
 set(Boost_MINIMUM_VERSION "1.33.1")
-find_package(Boost 1.33.1 COMPONENTS graph)
-macro_log_feature(Boost_FOUND "Boost" "Boost C++ Libraries" "http://www.boost.org" TRUE "" "The boost libraries boost and boost-graph are required by several critical KDEPIM apps.")
+find_package(Boost ${Boost_MINIMUM_VERSION} COMPONENTS graph)
+macro_log_feature(Boost_FOUND "Boost" "Boost C++ Libraries" "http://www.boost.org" TRUE ${Boost_MINIMUM_VERSION} "The Boost libraries boost and boost-graph are required by several critical KDEPIM apps.")
 
 #FindGpgme.cmake already handles the log message but we must ensure it is required.
 find_package(Gpgme REQUIRED)
