Add method to preselect an address book in ContactEditorDialog
svn path=/trunk/KDE/kdepimlibs/; revision=1019852

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -29,6 +29,7 @@ set(akonadicontact_editor_SRCS
 set(akonadicontact_LIB_SRC
   addressbookcombobox.cpp
   addressbookselectiondialog.cpp
+  asyncselectionhandler.cpp
   attributeregistrar.cpp
   collectionfiltermodel.cpp
   contactcompletionmodel.cpp
