--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -77,6 +77,7 @@ install(FILES editor/data/zone.tab DESTINATION ${DATA_INSTALL_DIR}/akonadi/conta
 
 install( FILES
   akonadi-contact_export.h
+  addressbookcombobox.h
   addressbookselectiondialog.h
   contacteditor.h
   contacteditordialog.h
