--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -5,6 +5,8 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/kabc
 )
 
+add_subdirectory(tests)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII ${KDE4_ENABLE_EXCEPTIONS}")
 
 ########### next target ###############
