--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -19,7 +19,7 @@ Name[fa]=وصلۀ Kontact
 Name[fi]=Kontact-liitännäinen
 Name[fr]=Module Kontact
 Name[ga]=Breiseán Kontact
-Name[gl]=Engadido do Kontact
+Name[gl]=Engadido para Kontact
 Name[he]=תוסף Kontact
 Name[hu]=Kontact-bővítőmodul
 Name[is]=Kontact íforrit
