--- a/KdepimLibsConfig.cmake.in
+++ b/KdepimLibsConfig.cmake.in
@@ -75,6 +75,7 @@ _kdepimlibs_set_lib_vars(KHOLIDAYS      kholidays)
 _kdepimlibs_set_lib_vars(KIMAP          kimap)
 _kdepimlibs_set_lib_vars(KLDAP          kldap)
 _kdepimlibs_set_lib_vars(KMIME          kmime)
+_kdepimlibs_set_lib_vars(KONTACTINTERFACES kontactinterfaces)
 _kdepimlibs_set_lib_vars(KPIMIDENTITIES kpimidentities)
 _kdepimlibs_set_lib_vars(KPIMTEXTEDIT   kpimtextedit)
 _kdepimlibs_set_lib_vars(KPIMUTILS      kpimutils)
