SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdepimlibs/; revision=1024447

--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -6,6 +6,7 @@ Name[cs]=Kalendář v místním souboru
 Name[da]=Kalender i lokal fil
 Name[de]=Kalender in lokaler Datei
 Name[el]=Ημερολόγιο σε τοπικό αρχείο
+Name[en_GB]=Calendar in Local File
 Name[es]=Calendario en archivo local
 Name[et]=Kalender kohalikus failis
 Name[fr]=Calendrier dans un fichier local
@@ -46,6 +47,7 @@ Comment[cs]=Poskytuje přístup ke kalendáři uloženém v jednom lokálním so
 Comment[da]=Giver adgang til en kalender lagret i en enkelt lokal fil
 Comment[de]=Ermöglicht Zugriff auf einen Kalender, der in einer einzigen Dateien lokal gespeichert ist
 Comment[el]=Προσφέρει πρόσβαση σε ένα ημερολόγιο αποθηκευμένο σε ένα τοπικό αρχείο
+Comment[en_GB]=Provides access to a calendar stored in a single local file
 Comment[es]=Provee acceso a un calendario almacenado en un único archivo local
 Comment[et]=Võimaldab kasutada kohalikku faili salvestatud kalendrit
 Comment[fr]=Fourni l'accès à un agenda stocké dans un fichier local
