--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -15,6 +15,7 @@ Name[cs]=Zdroje KDE
 Name[da]=KDE-ressourcer
 Name[de]=KDE-Ressourcen
 Name[el]=Πόροι του KDE
+Name[en_GB]=KDE Resources
 Name[es]=Recursos KDE
 Name[et]=KDE ressursid
 Name[fr]=Ressources KDE
@@ -57,6 +58,7 @@ Comment[cs]=Nastavení zdrojů KDE
 Comment[da]=Indstil KDE-ressourcer
 Comment[de]=KDE-Ressourcen einrichten
 Comment[el]=Ρύθμιση πόρων του KDE
+Comment[en_GB]=Configure KDE Resources
 Comment[es]=Configurar recursos de KDE
 Comment[et]=KDE ressursside seadistamine
 Comment[fr]=Configurer les ressources KDE
