--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -18,6 +18,7 @@ Name[cs]=Přenos pošty
 Name[da]=Mail-transport
 Name[de]=Versandart
 Name[el]=Κύριος μεταφορέας
+Name[en_GB]=Mail Transport
 Name[es]=Transporte de correo
 Name[et]=Kirja saatmise viis
 Name[fr]=Transport de courriel
@@ -41,6 +42,7 @@ Name[pt_BR]=Transporte de e-mail
 Name[ro]=Transport poștal
 Name[ru]=Метод отправки
 Name[se]=E-boastta fievrridanvuohki
+Name[sk]=Mail Transport
 Name[sl]=Prenos pošte
 Name[sr]=Транспорт поште
 Name[sr@latin]=Transport pošte
