--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -7,6 +7,7 @@ Name[cs]=Kalendář
 Name[da]=Kalender
 Name[de]=Kalender
 Name[el]=Ημερολόγιο
+Name[en_GB]=Calendar
 Name[es]=Calendario
 Name[et]=Kalender
 Name[fr]=Calendrier
@@ -29,6 +30,7 @@ Name[pa]=ਕੈਲੰਡਰ
 Name[pl]=Kalendarz
 Name[pt]=Calendário
 Name[pt_BR]=Calendário
+Name[ro]=Calendar
 Name[ru]=Календарь
 Name[se]=Kaleandar
 Name[sk]=Kalendár
