--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -6,6 +6,7 @@ Name[cs]=Kalendář v místním adresáři
 Name[da]=Kalender i lokal mappe
 Name[de]=Kalender in lokalem Ordner
 Name[el]=Ημερολόγιο σε τοπικό κατάλογο
+Name[en_GB]=Calendar in Local Directory
 Name[es]=Calendario en directorio local
 Name[et]=Kalender kohalikus kataloogis
 Name[fr]=Calendrier dans un dossier local
@@ -46,6 +47,7 @@ Comment[cs]=Poskytuje přístup k položkám kalendáře, každé uložené v je
 Comment[da]=Giver adgang til kalenderelementer, hver lagret i en enkelt fil, i en given mappe
 Comment[de]=Ermöglicht Zugriff auf Kalender, die jeweils in einzelnen Dateien in einem vorgegebenen Ordner gespeichert sind
 Comment[el]=Προσφέρει πρόσβαση σε αντικείμενα ημερολογίου, αποθηκευμένα σε ξεχωριστά αρχεία, σε ένα δοσμένο κατάλογο
+Comment[en_GB]=Provides access to calendar items, each stored in a single file, in a given directory
 Comment[es]=Provee acceso a elementos de un calendario, cada uno almacenado en un archivo diferente, dentro de un directorio determinado
 Comment[et]=Võimaldab kasutada eraldi failidesse salvestatud kalendrielemente määratud kataloogis
 Comment[fr]=Fourni l'accès à des entrées d'agenda, chaque élément étant représenté par un fichier dans le dossier indiqué
