--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -5,6 +5,7 @@ Name[cs]=KResource správce
 Name[da]=KResources-håndtering
 Name[de]=Ressourcenverwaltung
 Name[el]=Διαχειριστής KResources
+Name[en_GB]=KResources Manager
 Name[es]=Gestor de KResources
 Name[et]=KDE ressursside haldur
 Name[fr]=Gestionnaire de ressources
@@ -47,6 +48,7 @@ Comment[cs]=KResource správce
 Comment[da]=KResources-håndtering
 Comment[de]=Ressourcenverwaltung
 Comment[el]=Διαχειριστής KResources
+Comment[en_GB]=KResources Manager
 Comment[es]=Gestor de KResources
 Comment[et]=KDE ressursside haldur
 Comment[fr]=Gestionnaire de ressources
