--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -5,6 +5,7 @@ Name[cs]=Modul rámce KResource
 Name[da]=KResources-plugin
 Name[de]=KRessourcen-Modul
 Name[el]=Πρόσθετο KResources
+Name[en_GB]=KResources Plugin
 Name[es]=Complemento de KResources
 Name[et]=KDE ressursside plugin
 Name[fr]=Module externe de gestion de ressources
@@ -47,6 +48,7 @@ Comment[cs]=Modul rámce KResource
 Comment[da]=KResource-strukturplugin
 Comment[de]=Modul für KRessourcen-Grundgerüst
 Comment[el]=Πρόσθετο πλαισίου εργασίας του KResource
+Comment[en_GB]=KResources Framework Plugin
 Comment[es]=Complemento de estructura de KResources
 Comment[et]=KDE ressursside raamistiku plugin
 Comment[fr]=Module externe d'infrastructure de ressources
