Install the headers
svn path=/trunk/KDE/kdepimlibs/; revision=1025680

--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -17,6 +17,7 @@ install_headers( KCal )
 install_headers( KIMAP )
 install_headers( KLDAP )
 install_headers( KMime )
+install_headers( KontactInterface )
 install_headers( KPIMIdentities )
 install_headers( KPIMUtils )
 install_headers( KResources )
