--- a/includes/tests/CMakeLists.txt
+++ b/includes/tests/CMakeLists.txt
@@ -17,23 +17,22 @@ include_directories(
   ${Boost_INCLUDE_DIR}
 )
 
-if ( Akonadi_FOUND )
-  add_includes( Akonadi )
-endif( Akonadi_FOUND )
-add_includes( KHolidays )
+add_includes( Akonadi )
 add_includes( KABC )
 add_includes( KBlog )
 add_includes( KCal )
-add_includes( KLDAP )
-add_includes( KResources )
-add_includes( KPIMIdentities )
-add_includes( Syndication )
-add_includes( KPIMUtils )
-add_includes( KPIMTextEdit )
+add_includes( KHolidays )
 add_includes( KIMAP )
+add_includes( KLDAP )
 add_includes( KMime )
+add_includes( KontactInterface )
+add_includes( KPIMIdentities )
+add_includes( KPIMTextEdit )
+add_includes( KPIMUtils )
+add_includes( KResources )
 add_includes( KTNEF )
 add_includes( Mailtransport )
+add_includes( Syndication )
 
 add_definitions( -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_KEYWORDS )
 kde4_add_executable( headertest header_compile.cpp )
