Add a test for the crash on exit I'm getting. It is not the best of all tests, since it will simply segfault when it fails, but it is better than nothing.
Fix for this will follow soon, after I figured this out.

svn path=/trunk/KDE/kdepimlibs/; revision=1026536

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -5,6 +5,8 @@ include_directories(
  ${LIBICAL_INCLUDE_DIRS}
 )
 
+add_definitions( -DICALTESTDATADIR="\\"${CMAKE_SOURCE_DIR}/kcal/tests/data/\\"" )
+
 MACRO(KCAL_UNIT_TESTS)
   FOREACH(_testname ${ARGN})
     kde4_add_unit_test(${_testname} NOGUI ${_testname}.cpp)
