SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdepimlibs/; revision=1026636

--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -15,6 +15,7 @@ Name[ga]=Féilire
 Name[gl]=Axenda
 Name[hne]=कलेन्डर
 Name[hu]=Naptár
+Name[is]=Dagatal
 Name[it]=Calendario
 Name[ja]=カレンダー
 Name[km]=ប្រតិទិន
