--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -23,6 +23,7 @@ Name[ga]=Acmhainní KDE
 Name[gl]=Recursos de KDE
 Name[hne]=केडीई संसाधन
 Name[hu]=KDE-erőforrások
+Name[is]=KDE auðlindir
 Name[it]=Risorse di KDE
 Name[ja]=KDE リソース
 Name[km]=ធនធាន​របស់ KDE
@@ -66,6 +67,7 @@ Comment[ga]=Cumraigh Acmhainní KDE
 Comment[gl]=Configurar os recursos de KDE
 Comment[hne]=केडीई संसाधन मन ल कान्फिगर करव
 Comment[hu]=A KDE-erőforrások beállítása
+Comment[is]=Stilla KDE auðlindir
 Comment[it]=Configura le risorse di KDE
 Comment[ja]=KDE リソースの設定
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​ធនធាន KDE
