--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -26,6 +26,7 @@ Name[ga]=Iompar Ríomhphoist
 Name[gl]=Transporte de correo
 Name[hne]=मेल ट्रांसपोर्ट
 Name[hu]=Levéltovábbítás
+Name[is]=Póstflutningsleiðir
 Name[it]=Trasporto della posta
 Name[ja]=メール送信手段
 Name[km]=ការ​ដឹកជញ្ជូន​សំបុត្រ
