--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -14,6 +14,7 @@ Name[ga]=Féilire i gComhadlann Logánta
 Name[gl]=Axenda nun cartafol local
 Name[hne]=लोकल डिरेक्टरी मं कलेन्डर
 Name[hu]=Naptár helyi könyvtárban
+Name[is]=Dagatal í staðbundinni möppu
 Name[it]=Calendario nella cartella locale
 Name[ja]=ローカルディレクトリのカレンダー
 Name[km]=ប្រតិទិន​ក្នុង​ថត​មូលដ្ឋាន
