Allow to hide objects on a view-level, similar to hidden files. Needed for internal collections as e.g. present on Kolab and Scalix groupware servers. Has no effect yet, since support for it in the ETM is still pending.
svn path=/trunk/KDE/kdepimlibs/; revision=1027156

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -92,6 +92,7 @@ add_akonadi_test(mimetypecheckertest.cpp)
 add_akonadi_test(protocolhelpertest.cpp)
 add_akonadi_test(entitytreemodeltest.cpp)
 add_akonadi_test(collectionutilstest.cpp)
+add_akonadi_test(entitydisplayattributetest.cpp)
 
 # qtestlib tests that need non-exported stuff from akonadi-kde
 kde4_add_unit_test(resourceschedulertest TESTNAME akonadi-resourceschedulertest resourceschedulertest.cpp ../resourcescheduler.cpp)
