SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1027544

--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -5,6 +5,7 @@ Name=Kontact Plugin
 Name[ga]=Breiseán Kontact
 Name[gl]=Extensión de Kontact
 Name[nb]=Kontact-programtillegg
+Name[nds]=Kontact-Moduul
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
 Name[sv]=Insticksprogram för Kontact
