--- a/krss/CMakeLists.txt
+++ b/krss/CMakeLists.txt
@@ -173,7 +173,7 @@ if (Nepomuk_FOUND)
 endif (Nepomuk_FOUND)
 
 set_target_properties(krss PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
-install(TARGETS krss DESTINATION ${LIB_INSTALL_DIR})
+install(TARGETS krss ${INSTALL_TARGETS_DEFAULT_ARGS})
 install( FILES ${krss_LIB_HDRS} DESTINATION ${INCLUDE_INSTALL_DIR}/krss )
 install( FILES ${krss_UI_LIB_HDRS} DESTINATION ${INCLUDE_INSTALL_DIR}/krss/ui )
 install( FILES ${krss_PRIVATE_LIB_HDRS} DESTINATION ${INCLUDE_INSTALL_DIR}/krss/private )
