--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -10,5 +10,19 @@ X-KDE-CfgDlgHierarchy=KAddressBook
 X-KDE-Weight=200
 
 Name=Contact Actions
+Name[nds]=Kontakt-Akschonen
+Name[pt]=Acções do Contacto
+Name[pt_BR]=Ações do contatos
+Name[sv]=Kontaktåtgärder
+Name[tr]=Kişi Eylemleri
+Name[uk]=Дії контакту
+Name[x-test]=xxContact Actionsxx
 Comment=Configure the Contact Actions
+Comment[nds]=Kontakt-Akschonen instellen
+Comment[pt]=Configurar as Acções do Contacto
+Comment[pt_BR]=Configura as ações do contato
+Comment[sv]=Anpassa kontaktåtgärder
+Comment[tr]=Kişi Eylemlerini Yapılandır
+Comment[uk]=Налаштування дій для контакту
+Comment[x-test]=xxConfigure the Contact Actionsxx
 X-KDE-Keywords=kaddressbook, configure, settings, contact, actions
