ContactEditor supports custom pages now that are loaded at runtime via plugins
svn path=/trunk/KDE/kdepimlibs/; revision=1030605

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -94,6 +94,7 @@ install( FILES
   contactdefaultactions.h
   contacteditor.h
   contacteditordialog.h
+  contacteditorpageplugin.h
   contactgroupeditor.h
   contactgroupeditordialog.h
   contactgroupexpandjob.h
