--- a/qgpgme/CMakeLists.txt
+++ b/qgpgme/CMakeLists.txt
@@ -34,7 +34,10 @@ if ( _any_gpgme_found )
 
    include_directories( ${GPGME_INCLUDES} ${CMAKE_SOURCE_DIR}/gpgme++ ${Boost_INCLUDE_DIR} )
 
-   add_subdirectory( tests )
+   if(NOT WIN32)
+     #currently not all the tests build on Windows
+     add_subdirectory( tests )
+   endif(NOT WIN32)
 
    set( qgpgme_LIB_SRCS
         dataprovider.cpp
