--- a/kresources/tests/CMakeLists.txt
+++ b/kresources/tests/CMakeLists.txt
@@ -1,6 +1,5 @@
 
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/kresources )
 
 ########### next target ###############
 
@@ -9,7 +8,7 @@ set(testresources_SRCS testresources.cpp)
 
 kde4_add_unit_test(testresources TESTNAME kresources-testresources  ${testresources_SRCS})
 
-target_link_libraries(testresources ${KDE4_KDECORE_LIBS} kresources)
+target_link_libraries(testresources ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} kresources)
 
 ########### next target ###############
 
@@ -18,5 +17,5 @@ set(idmappertest_SRCS idmappertest.cpp)
 
 kde4_add_unit_test(idmappertest TESTNAME kresources-idmappertest  ${idmappertest_SRCS})
 
-target_link_libraries(idmappertest ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} kresources)
+target_link_libraries(idmappertest ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} ${QT_QTGUI_LIBRARY} kresources)
 
