SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1032692

--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -3,7 +3,7 @@ Type=ServiceType
 X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[ga]=Breiseán Kontact
-Name[gl]=Extensión de Kontact
+Name[gl]=Engadido de Kontact
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
 Name[pt]='Plugin' do Kontact
