--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -10,7 +10,7 @@ Name[es]=Complemento de KResources
 Name[et]=KDE ressursside plugin
 Name[fr]=Module externe de gestion de ressources
 Name[ga]=Breiseán KResources
-Name[gl]=Extensión de KResources
+Name[gl]=Engadido de KResources
 Name[hne]=केरिसोर्स प्लगइन
 Name[hu]=KResources-modul
 Name[it]=Plugin di KResources
@@ -53,7 +53,7 @@ Comment[es]=Complemento de estructura de KResources
 Comment[et]=KDE ressursside raamistiku plugin
 Comment[fr]=Module externe d'infrastructure de ressources
 Comment[ga]=Breiseán Creatlaí KResources
-Comment[gl]=Extensión da infraestrutura KResource
+Comment[gl]=Engadido da infraestrutura KResource
 Comment[hne]=केरिसोर्स फ्रेमवर्क प्लगइन
 Comment[hu]=Modul a KResources keretrendszerhez
 Comment[it]=Plugin di infrastruttura di KResources
