move the property de/serialization from feedpropertiesattribute to helper_p.h, and use it in tagproperties, too (which didn't handle =, ; in tag attributes correctly, and would crash in case the attribute value is malformed). Add similar functions to de/serialize flat string lists and use them for SubscriptionLabelCollectionAttributes. Add a unit test for the serialization.
svn path=/branches/work/akonadi-ports/kdepim/; revision=1033821

--- a/krss/CMakeLists.txt
+++ b/krss/CMakeLists.txt
@@ -38,6 +38,7 @@ set(krss_LIB_SRCS
    netfeed.cpp
    feedlist.cpp
    dbushelper.cpp
+   helper.cpp
    itemmodel.cpp
    treenode.cpp
    treenodevisitor.cpp
