--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -11,6 +11,7 @@ X-KDE-Weight=200
 
 Name=Contact Actions
 Name[en_GB]=Contact Actions
+Name[es]=Acciones de contactos
 Name[gl]=Accións de contacto
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -22,6 +23,7 @@ Name[uk]=Дії контакту
 Name[x-test]=xxContact Actionsxx
 Comment=Configure the Contact Actions
 Comment[en_GB]=Configure the Contact Actions
+Comment[es]=Configurar las acciones de contactos
 Comment[gl]=Configurar as accións de contacto
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
