--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -3,6 +3,7 @@ Type=ServiceType
 X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[en_GB]=Kontact Plugin
+Name[es]=Complemento de Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[nb]=Kontact-programtillegg
