--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -10,7 +10,10 @@ X-KDE-CfgDlgHierarchy=KAddressBook
 X-KDE-Weight=200
 
 Name=Contact Actions
+Name[en_GB]=Contact Actions
+Name[es]=Acciones de contactos
 Name[gl]=Accións de contacto
+Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações do contatos
@@ -19,7 +22,10 @@ Name[tr]=Kişi Eylemleri
 Name[uk]=Дії контакту
 Name[x-test]=xxContact Actionsxx
 Comment=Configure the Contact Actions
+Comment[en_GB]=Configure the Contact Actions
+Comment[es]=Configurar las acciones de contactos
 Comment[gl]=Configurar as accións de contacto
+Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
