add_definitions -DQT_GUI_LIB for building with Qt4.6
svn path=/branches/KDE/4.3/kdepimlibs/; revision=1035114

--- a/kpimtextedit/tests/CMakeLists.txt
+++ b/kpimtextedit/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(textedittest_SRCS textedittest.cpp)
+add_definitions("-DQT_GUI_LIB") # to be able to use keyboard events like QTest::keyClick()
 kde4_add_unit_test(textedittest TESTNAME textedittest ${textedittest_SRCS})
 
 target_link_libraries(textedittest
