necessary to install it for kmail (need to show icons)
svn path=/branches/work/akonadi-ports/kdepimlibs/; revision=1035301

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -269,7 +269,7 @@ install( FILES
 )
 
 install( FILES
-   collectionpathresolver_p.h
+   collectionpathresolver_p.h collectionutils_p.h
    DESTINATION ${INCLUDE_INSTALL_DIR}/akonadi/private COMPONENT Devel
    )
 
