--- a/kimap/CMakeLists.txt
+++ b/kimap/CMakeLists.txt
@@ -18,6 +18,7 @@ set(kimap_LIB_SRCS
    listjob.cpp
    loginjob.cpp
    logoutjob.cpp
+   namespacejob.cpp
    rfccodecs.cpp
    selectjob.cpp
    session.cpp
@@ -58,7 +59,7 @@ install(TARGETS kimap EXPORT kdepimlibsLibraryTargets ${INSTALL_TARGETS_DEFAULT_
 
 ########### install files ###############
 
-install( FILES kimap_export.h acl.h imapset.h job.h appendjob.h capabilitiesjob.h fetchjob.h idlejob.h listjob.h loginjob.h logoutjob.h rfccodecs.h
+install( FILES kimap_export.h acl.h imapset.h job.h appendjob.h capabilitiesjob.h fetchjob.h idlejob.h listjob.h loginjob.h logoutjob.h namespacejob.h rfccodecs.h
  selectjob.h closejob.h expungejob.h deletejob.h createjob.h subscribejob.h unsubscribejob.h renamejob.h
  session.h sessionuiproxy.h storejob.h copyjob.h searchjob.h acljobbase.h setacljob.h getacljob.h deleteacljob.h
  myrightsjob.h listrightsjob.h quotajobbase.h setquotajob.h getquotajob.h getquotarootjob.h metadatajobbase.h setmetadatajob.h getmetadatajob.h
